--- a/Paint Panel/Paint Panel.csproj
+++ b/Paint Panel/Paint Panel.csproj
@@ -16,7 +16,10 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Paint Panel_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>Paint Panel_StoreKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>D63252956A28DF25EB139BE446A366BD8DC76BF4</PackageCertificateThumbprint>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -89,24 +92,25 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="Paint Panel_StoreKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CalligraphyPen.cs" />
-    <Compile Include="FilesOperator.cs" />
-    <Compile Include="InkBrush.cs" />
+    <Compile Include="Pens\CalligraphyPen.cs" />
+    <Compile Include="Control\FilesOperator.cs" />
+    <Compile Include="Pens\InkBrush.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MarkerPen.cs" />
-    <Compile Include="PanelColors.cs" />
-    <Compile Include="PencilBrush.cs" />
+    <Compile Include="Pens\MarkerPen.cs" />
+    <Compile Include="Control\PanelColors.cs" />
+    <Compile Include="Pens\PencilBrush.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToastCollection.cs" />
-    <Compile Include="UsualPen.cs" />
+    <Compile Include="Control\ToastCollection.cs" />
+    <Compile Include="Pens\UsualPen.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -120,6 +124,7 @@
     <Content Include="Assets\StoreLogo.scale-200.png" />
     <Content Include="Background\Mobile_Background.png" />
     <Content Include="Background\PC_Background.png" />
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
