--- a/Paint Panel/Paint Panel.csproj
+++ b/Paint Panel/Paint Panel.csproj
@@ -99,6 +99,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPage_Mobile.xaml.cs">
+      <DependentUpon>MainPage_Mobile.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pens\CalligraphyPen.cs" />
     <Compile Include="Control\FilesOperator.cs" />
     <Compile Include="Pens\InkBrush.cs" />
@@ -139,6 +142,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainPage_Mobile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
