--- a/Paint Panel/project.json
+++ b/Paint Panel/project.json
@@ -2,8 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Toolkit.Uwp.Notifications": "1.3.1",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1",
-    "Win2D.uwp": "1.20.0"
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1"
   },
   "frameworks": {
     "uap10.0": {}
