暂时移除字典，因为它并没有发挥作用。

--- a/Paint Panel/Paint Panel.csproj
+++ b/Paint Panel/Paint Panel.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Paint_Panel</RootNamespace>
     <AssemblyName>Paint Panel</AssemblyName>
-    <DefaultLanguage>zh-CN</DefaultLanguage>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.15063.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
@@ -19,7 +19,7 @@
     <PackageCertificateKeyFile>Paint Panel_StoreKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>D63252956A28DF25EB139BE446A366BD8DC76BF4</PackageCertificateThumbprint>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
-    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <AppxBundle>Always</AppxBundle>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -95,7 +95,6 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="Paint Panel_StoreKey.pfx" />
     <None Include="project.json" />
-    <PRIResource Include="Strings\zh\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
