--- a/Paint Panel/project.json
+++ b/Paint Panel/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.Toolkit.Uwp": "1.4.1",
     "Microsoft.Toolkit.Uwp.Notifications": "1.3.1",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.3.1"
   },
