--- a/Paint Panel/Paint Panel.csproj
+++ b/Paint Panel/Paint Panel.csproj
@@ -127,8 +127,13 @@
     <Content Include="Assets\Square310x310Logo.scale-200.png" />
     <Content Include="Assets\Square71x71Logo.scale-200.png" />
     <Content Include="Assets\StoreLogo.scale-200.png" />
-    <Content Include="Background\PC_Background.png" />
+    <Content Include="Image\CalligraphyPen.jpg" />
+    <Content Include="Image\InkBrush.jpg" />
+    <Content Include="Image\MarkerPen.jpg" />
+    <Content Include="Image\PC_Background.png" />
     <None Include="Package.StoreAssociation.xml" />
+    <Content Include="Image\PencilBrush.jpg" />
+    <Content Include="Image\UsualPen.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
